--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -50,11 +50,11 @@
 <table class="ta1">
 <tr>
 <th>発送日</th>
-<td colspan="3"><input type="date" id="date-picker" name="entry.487303294" class="ws" style="width: 120px;"></td>
+<td colspan="3"><input type="date" id="datepicker" name="entry.487303294" class="ws" style="width: 120px;"></td>
 </tr>
 <tr>
 <th>氏名</th>
-<td colspan="2"><input type="text" name="entry.147184437" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.147184437" id="addressname"size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.48928667" size="30" class="ws" autocomplete="off" 
       style="width: 50px; margin: 0px 15px 0px 30px;"  placeholder="敬称"></td>
 </tr>
@@ -70,32 +70,32 @@
 </tr>
 <tr>
 <th>建物名</th>
-<td colspan="3"><input type="text" size="30" class="ws" autocomplete="off" name="entry.1793772112"></td>
+<td colspan="3"><input type="text" id="contractor_building" size="30" class="ws" autocomplete="off" name="entry.1793772112"></td>
 </tr>
 <tr>
 <th>送付物.1</th>
-<td colspan="2"><input type="text" name="entry.571521907" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.230824405" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.571521907" id="sending1" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.230824405"  id="sending1_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.2</th>
-<td colspan="2"><input type="text" name="entry.1136923254" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.1182823623" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.1136923254" id="sending2" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.1182823623" id="sending2_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.3</th>
-<td colspan="2"><input type="text" name="entry.1514396093" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.1746422599" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.1514396093" id="sending3" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.1746422599" id="sending3_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.4</th>
-<td colspan="2"><input type="text" name="entry.254609885" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.1446297283" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.254609885" id="sending4" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.1446297283" id="sending4_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 <tr>
 <th>送付物.5</th>
-<td colspan="2"><input type="text" name="entry.1134353344" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.234563841" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td colspan="2"><input type="text" name="entry.1134353344 id="sending5"" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td><input type="text" name="entry.234563841" id="sending5_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 </table>
 
