--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -108,11 +108,26 @@
 </section>
 </div>
 
-  
+<div class="no-screen">
 <section>
-
+<span class="datePickerLabel"></span>
+<span class="addressNameLabel"></span>
+<span class="contractor_postal_codeLabel"></span>
+<span class="contractor_addressLabel"></span>
+<span class="contractor_buildingLabel"></span>
+<span class="sending1Label"></span>
+<span class="sending1Labe2'"></span>
+<span class="sending1Labe3"></span>
+<span class="sending1Labe4"></span>
+<span class="sending1Labe5"></span>
+<span class="sending1Label_1"></span>
+<span class="sending1Labe2_1"></span>
+<span class="sending1Labe3_1"></span>
+<span class="sending1Labe4_1"></span>
+<span class="sending1Labe5_1"></span>
 </section> 
-
+</div>
+  
 </main>
 
 <div class="no-print">
@@ -138,5 +153,6 @@
 <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='finish.html';}"\></iframe>
 
 <script src="https://yubinbango.github.io/yubinbango/yubinbango.js" charset="UTF-8"></script>
+<script src="js/record2.js"></script>
 </body>
 </html>
