--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -94,7 +94,7 @@
 </tr>
 <tr>
 <th>送付物.5</th>
-<td colspan="2"><input type="text" name="entry.1134353344 id="sending5"" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.1134353344 id="sending5" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
 <td><input type="text" name="entry.234563841" id="sending5_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
 </tr>
 </table>
@@ -116,15 +116,15 @@
 <span class="contractor_addressLabel"></span>
 <span class="contractor_buildingLabel"></span>
 <span class="sending1Label"></span>
-<span class="sending1Labe2'"></span>
-<span class="sending1Labe3"></span>
-<span class="sending1Labe4"></span>
-<span class="sending1Labe5"></span>
-<span class="sending1Label_1"></span>
-<span class="sending1Labe2_1"></span>
-<span class="sending1Labe3_1"></span>
-<span class="sending1Labe4_1"></span>
-<span class="sending1Labe5_1"></span>
+<span class="sending2Label'"></span>
+<span class="sending3Label"></span>
+<span class="sending4Label"></span>
+<span class="sending5Label"></span>
+<span class="sending1_1Label"></span>
+<span class="sending2_1Label"></span>
+<span class="sending3_1Label"></span>
+<span class="sending4_1Label"></span>
+<span class="sending5_1Label"></span>
 </section> 
 </div>
   
