--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -55,7 +55,7 @@
 <tr>
 <th>氏名</th>
 <td colspan="2"><input type="text" name="entry.147184437" id="addressname"size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.48928667" size="30" class="ws" autocomplete="off" 
+<td><input type="text" name="entry.48928667" size="30" class="ws" autocomplete="off" id="honor" 
       style="width: 50px; margin: 0px 15px 0px 30px;"  placeholder="敬称"></td>
 </tr>
 <tr>
@@ -112,6 +112,7 @@
 <section>
 <span class="datePickerLabel"></span>
 <span class="addressNameLabel"></span>
+<span class="honor"></span>
 <span class="contractor_postal_codeLabel"></span>
 <span class="contractor_addressLabel"></span>
 <span class="contractor_buildingLabel"></span>
