--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -112,7 +112,7 @@
 <section>
 <span class="datePickerLabel"></span>
 <span class="addressNameLabel"></span>
-<span class="honor"></span>
+<span class="honorLabel"></span>
 <span class="contractor_postal_codeLabel"></span>
 <span class="contractor_addressLabel"></span>
 <span class="contractor_buildingLabel"></span>
