--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -99,10 +99,16 @@
 </tr>
 </table>
 
-<p class="btn">
-  <input type="submit" value="送信する">
-</p>
+<div class="no-print">
+  <div class="btn">
+    <a href="javascript:void(0)" onclick="window.print();return false;" class="btns">印刷する</a>
+  </div><br>
+  <div class="btn">
+    <input type="submit" value="送信する">
+  </div>    
+</div>
 
+  
 </form>
 </div>
 </section>
@@ -148,8 +154,10 @@
 <script src="js/main.js"></script>
 
 <!--ページの上部へ戻るボタン-->
+<div class="no-print">
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
-
+</div>
+  
 <script type="text/javascript"> let submitted = false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='finish.html';}"\></iframe>
 
