--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -115,7 +115,7 @@
 </div>
 
 <div class="no-screen">
-<section>
+<section style="padding: 0px 30px 0px 30px; background-color: #fff;">
 <span class="datePickerLabel"></span>
 <span class="addressNameLabel"></span>
 <span class="honorLabel"></span>
@@ -132,6 +132,53 @@
 <span class="sending3_1Label"></span>
 <span class="sending4_1Label"></span>
 <span class="sending5_1Label"></span>
+
+  
+  <table class="ta1">
+    <tr>
+     <td></td>
+    </tr>
+    <tr>
+     <td></td>
+    </tr>
+    <tr>
+     <td></td>
+    </tr>
+        <tr>
+     <td></td>
+    </tr>
+  </table><br>
+  
+  <table class="ta1">
+    <tr>
+     <td></td>
+    </tr>
+    <tr>
+     <td></td>
+    </tr>
+    <tr>
+     <td></td>
+    </tr>
+        <tr>
+     <td></td>
+    </tr>
+  </table><br>
+   
+  <table class="ta1">
+    <tr>
+     <td></td>
+    </tr>
+    <tr>
+     <td></td>
+    </tr>
+    <tr>
+     <td></td>
+    </tr>
+        <tr>
+     <td></td>
+    </tr>
+  </table>
+  
 </section> 
 </div>
   
