--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -116,12 +116,11 @@
 
 <div class="no-screen">
 <section style="padding: 0px 30px 0px 30px; background-color: #fff;">
-<span class="datePickerLabel"></span>
-<span class="addressNameLabel"></span>
-<span class="honorLabel"></span>
-<span class="contractor_postal_codeLabel"></span>
-<span class="contractor_addressLabel"></span>
-<span class="contractor_buildingLabel"></span>
+
+
+
+
+
 <span class="sending1Label"></span>
 <span class="sending2Label"></span>
 <span class="sending3Label"></span>
@@ -133,19 +132,33 @@
 <span class="sending4_1Label"></span>
 <span class="sending5_1Label"></span>
 
-  
+<div class="record2">
   <table class="ta1">
     <tr>
-     <td></td>
+     <td>
+       <span class="datePickerLabel"></span><br>  
+     </td>
     </tr>
     <tr>
-     <td></td>
+     <td>
+       〒<span class="contractor_postal_codeLabel"></span><br>
+       <span class="contractor_addressLabel"></span><br>
+       <span class="contractor_buildingLabel"></span>
+     </td>
     </tr>
     <tr>
-     <td></td>
+     <td><span class="addressNameLabel"></span>　<span class="honorLabel"></span></td>
     </tr>
-        <tr>
-     <td></td>
+    <tr>
+     <td>株式会社きずな少額短期保険<br>
+       愛知県名古屋市中区錦2-13-30-9F<br>
+       電話：052-228-1335
+     </td>
+    </tr>
+    <tr>
+     <td>
+       
+     </td>
     </tr>
   </table><br>
   
@@ -178,6 +191,7 @@
      <td></td>
     </tr>
   </table>
+</div>
   
 </section> 
 </div>
