--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -117,26 +117,11 @@
 <div class="no-screen">
 <section style="padding: 0px 30px 0px 30px; background-color: #fff;">
 
-
-
-
-
-<span class="sending1Label"></span>
-<span class="sending2Label"></span>
-<span class="sending3Label"></span>
-<span class="sending4Label"></span>
-<span class="sending5Label"></span>
-<span class="sending1_1Label"></span>
-<span class="sending2_1Label"></span>
-<span class="sending3_1Label"></span>
-<span class="sending4_1Label"></span>
-<span class="sending5_1Label"></span>
-
 <div class="record2">
-  <table class="ta1">
+  <table class="ta5">
     <tr>
      <td>
-       <span class="datePickerLabel"></span><br>  
+       <p style="text-align: right;"><span class="datePickerLabel"></span></p>  
      </td>
     </tr>
     <tr>
@@ -191,6 +176,18 @@
      <td></td>
     </tr>
   </table>
+
+<span class="sending1Label"></span>
+<span class="sending2Label"></span>
+<span class="sending3Label"></span>
+<span class="sending4Label"></span>
+<span class="sending5Label"></span>
+<span class="sending1_1Label"></span>
+<span class="sending2_1Label"></span>
+<span class="sending3_1Label"></span>
+<span class="sending4_1Label"></span>
+<span class="sending5_1Label"></span>
+  
 </div>
   
 </section> 
