--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -125,19 +125,19 @@
      </td>
     </tr>
     <tr>
-     <td>
+     <td><p style="text-align: left;">
        〒<span class="contractor_postal_codeLabel"></span><br>
        <span class="contractor_addressLabel"></span><br>
-       <span class="contractor_buildingLabel"></span>
+       <span class="contractor_buildingLabel"></span></p>
      </td>
     </tr>
     <tr>
      <td><span class="addressNameLabel"></span>　<span class="honorLabel"></span></td>
     </tr>
-    <tr>
-     <td>株式会社きずな少額短期保険<br>
+    <tr><p style="text-align: right;">
+     <td><span style="font-weight: bold; font-size: 1.1em;">株式会社きずな少額短期保険</span><br>
        愛知県名古屋市中区錦2-13-30-9F<br>
-       電話：052-228-1335
+       電話：052-228-1335</p>
      </td>
     </tr>
     <tr>
