--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -128,14 +128,13 @@
      <td><p style="text-align: left;">
        〒<span class="contractor_postal_codeLabel"></span><br>
        <span class="contractor_addressLabel"></span><br>
-       <span class="contractor_buildingLabel"></span></p>
-     </td>
+       <span class="contractor_buildingLabel"></span><br>
+       <span class="addressNameLabel"></span>　<span class="honorLabel"></span></p></td>
     </tr>
     <tr>
-     <td><span class="addressNameLabel"></span>　<span class="honorLabel"></span></td>
-    </tr>
-    <tr><p style="text-align: right;">
-     <td><span style="font-weight: bold; font-size: 1.1em;">株式会社きずな少額短期保険</span><br>
+     <td>
+       <p style="text-align: right;">
+       <span style="font-weight: bold; font-size: 1.1em;">株式会社きずな少額短期保険</span><br>
        愛知県名古屋市中区錦2-13-30-9F<br>
        電話：052-228-1335</p>
      </td>
