--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -139,15 +139,28 @@
        電話：052-228-1335</p>
      </td>
     </tr>
+  </table><br>
+  
+  <table class="ta5">
     <tr>
-     <td>
+     <td colspan="3">
        <span style="font-weight: bold; font-size: 1.1em;">書類送付のご案内</span><br>
+     </td>
+    </tr>
+    <tr>
+     <td></td>
+      <td><p style="text-align: left;">
        拝啓<br>
        時下ますますご清栄のこととお喜び申し上げます。<br>
        平素は格別のご高配を賜り、厚く御礼申し上げます。<br>
        下記の通り、書類を送付させて頂きますので、よろしくお願い申し上げます。<br>
-       敬具<br>
-       記<br>
+       敬具</p>
+      </td>
+      <td></td>
+    </tr>
+    <tr>
+      <td colspan="3">
+       記
      </td>
     </tr>
   </table><br>
