--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -121,7 +121,7 @@
   <table class="ta5">
     <tr>
      <td>
-       <p style="text-align: right;"><span class="datePickerLabel"></span></p>  
+       <p style="text-align: right;"><span class="yearLabel"></span>年<span class="monthLabel"></span>月<span class="dayLabel"></span>日</p>  
      </td>
     </tr>
     <tr>
