--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -165,45 +165,40 @@
   
   <table class="ta1">
     <tr>
-     <td></td>
+     <td><span class="sending1Label"></span></td>
+     <td>　</td>
+     <td><span class="sending1_1Label"></span></td>
     </tr>
     <tr>
-     <td></td>
-    </tr>
+     <td><span class="sending1Label"></span></td>
+     <td>　</td>
+     <td><span class="sending1_1Label"></span></td>
+    </tr>    
     <tr>
-     <td></td>
+     <td><span class="sending2Label"></span></td>
+     <td>　</td>
+     <td><span class="sending2_1Label"></span></td>
+    </tr>      
+    <tr>
+     <td><span class="sending3Label"></span></td>
+     <td>　</td>
+     <td><span class="sending3_1Label"></span></td>
+    </tr>        
+    <tr>
+     <td><span class="sending4Label"></span></td>
+     <td>　</td>
+     <td><span class="sending4_1Label"></span></td>
     </tr>
         <tr>
-     <td></td>
+     <td><span class="sending5Label"></span></td>
+     <td>　</td>
+     <td><span class="sending5_1Label"></span></td>
     </tr>
   </table><br>
    
-  <table class="ta1">
-    <tr>
-     <td></td>
-    </tr>
-    <tr>
-     <td></td>
-    </tr>
-    <tr>
-     <td></td>
-    </tr>
-        <tr>
-     <td></td>
-    </tr>
-  </table>
+<p style="text-align: right;">以上</p>
 
-<span class="sending1Label"></span>
-<span class="sending2Label"></span>
-<span class="sending3Label"></span>
-<span class="sending4Label"></span>
-<span class="sending5Label"></span>
-<span class="sending1_1Label"></span>
-<span class="sending2_1Label"></span>
-<span class="sending3_1Label"></span>
-<span class="sending4_1Label"></span>
-<span class="sending5_1Label"></span>
-  
+
 </div>
   
 </section> 
