--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -163,36 +163,30 @@
     </tr>
   </table><br>
   
-  <table class="ta1">
+  <table class="ta1" style="width:500px;">
     <tr>
-     <td><span class="sending1Label"></span></td>
-     <td>　</td>
-     <td><span class="sending1_1Label"></span></td>
+     <td style="width:80%;"><span class="sending1Label"></span></td>
+     <td style="width:20%;"><span class="sending1_1Label"></span>部</td>
     </tr>
     <tr>
      <td><span class="sending1Label"></span></td>
-     <td>　</td>
-     <td><span class="sending1_1Label"></span></td>
+     <td><span class="sending1_1Label"></span>部</td>
     </tr>    
     <tr>
      <td><span class="sending2Label"></span></td>
-     <td>　</td>
-     <td><span class="sending2_1Label"></span></td>
+     <td><span class="sending2_1Label"></span>部</td>
     </tr>      
     <tr>
      <td><span class="sending3Label"></span></td>
-     <td>　</td>
-     <td><span class="sending3_1Label"></span></td>
+     <td><span class="sending3_1Label"></span>部</td>
     </tr>        
     <tr>
      <td><span class="sending4Label"></span></td>
-     <td>　</td>
-     <td><span class="sending4_1Label"></span></td>
+     <td><span class="sending4_1Label"></span>部</td>
     </tr>
-        <tr>
+    <tr>
      <td><span class="sending5Label"></span></td>
-     <td>　</td>
-     <td><span class="sending5_1Label"></span></td>
+     <td><span class="sending5_1Label"></span>部</td>
     </tr>
   </table><br>
    
