--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -156,21 +156,18 @@
        <p style="text-align: right;">敬具</p>
       </td>
     </tr>
+  </table><br><br>
+
+  <table class="ta5">
     <tr>
-      <td colspan="3">
-       記
-     </td>
+      <td>記</td>
     </tr>
-  </table><br>
+  </table><br><br>
   
   <table class="ta6" style="width:500px;">
     <tr>
      <td style="width:80%;"><span class="sending1Label"></span></td>
      <td style="width:20%;"><span class="sending1_1Label"></span>部</td>
-    </tr>
-    <tr>
-     <td><span class="sending1Label"></span></td>
-     <td><span class="sending1_1Label"></span>部</td>
     </tr>    
     <tr>
      <td><span class="sending2Label"></span></td>
