--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -149,8 +149,7 @@
     </tr>
     <tr>
       <td><p style="text-align: left; padding: 30px;">
-       拝啓<br>
-       時下ますますご清栄のこととお喜び申し上げます。<br>
+       拝啓　時下ますますご清栄のこととお喜び申し上げます。<br>
        平素は格別のご高配を賜り、厚く御礼申し上げます。<br>
        下記の通り、書類を送付させて頂きますので、よろしくお願い申し上げます。</p>
        <p style="text-align: right;">敬具</p>
