--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -152,7 +152,7 @@
        拝啓　時下ますますご清栄のこととお喜び申し上げます。<br>
        平素は格別のご高配を賜り、厚く御礼申し上げます。<br>
        下記の通り、書類を送付させて頂きますので、よろしくお願い申し上げます。</p>
-       <p style="text-align: right;">敬具</p>
+       <p style="text-align: right; padding-right: 20px;">敬具</p>
       </td>
     </tr>
   </table><br><br>
@@ -170,23 +170,23 @@
     </tr>    
     <tr>
      <td><span class="sending2Label"></span></td>
-     <td><span class="sending2_1Label"></span>部</td>
+     <td><span class="sending2_1Label"></span></td>
     </tr>      
     <tr>
      <td><span class="sending3Label"></span></td>
-     <td><span class="sending3_1Label"></span>部</td>
+     <td><span class="sending3_1Label"></span></td>
     </tr>        
     <tr>
      <td><span class="sending4Label"></span></td>
-     <td><span class="sending4_1Label"></span>部</td>
+     <td><span class="sending4_1Label"></span></td>
     </tr>
     <tr>
      <td><span class="sending5Label"></span></td>
-     <td><span class="sending5_1Label"></span>部</td>
+     <td><span class="sending5_1Label"></span></td>
     </tr>
   </table><br>
    
-<p style="text-align: right;">以上</p>
+<p style="text-align: right; padding-right: 20px;">以上</p>
 
 
 </div>
