--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -75,27 +75,37 @@
 <tr>
 <th>送付物.1</th>
 <td colspan="2"><input type="text" name="entry.571521907" id="sending1" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.230824405"  id="sending1_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td>
+  <input type="text" name="entry.230824405" id="sending1_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+</td>
 </tr>
 <tr>
 <th>送付物.2</th>
 <td colspan="2"><input type="text" name="entry.1136923254" id="sending2" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.1182823623" id="sending2_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td>
+  <input type="text" name="entry.1182823623" id="sending2_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+</td>
 </tr>
 <tr>
 <th>送付物.3</th>
 <td colspan="2"><input type="text" name="entry.1514396093" id="sending3" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.1746422599" id="sending3_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td>
+  <input type="text" name="entry.1746422599" id="sending3_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+</td>
 </tr>
 <tr>
 <th>送付物.4</th>
 <td colspan="2"><input type="text" name="entry.254609885" id="sending4" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.1446297283" id="sending4_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td>
+  <input type="text" name="entry.1446297283" id="sending4_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+</td>
 </tr>
 <tr>
 <th>送付物.5</th>
 <td colspan="2"><input type="text" name="entry.1134353344" id="sending5" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.234563841" id="sending5_1" size="30" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">部</td>
+<td>
+  <input type="text" name="entry.234563841" id="sending5_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+</td>
 </tr>
 </table>
 
@@ -166,23 +176,23 @@
   <table class="ta6" style="width:500px;">
     <tr>
      <td style="width:80%;"><span class="sending1Label"></span></td>
-     <td style="width:20%;"><span class="sending1_1Label"></span>部</td>
+     <td style="width:20%;">　<span class="sending1_1Label"></span></td>
     </tr>    
     <tr>
      <td><span class="sending2Label"></span></td>
-     <td><span class="sending2_1Label"></span></td>
+     <td>　<span class="sending2_1Label"></span></td>
     </tr>      
     <tr>
      <td><span class="sending3Label"></span></td>
-     <td><span class="sending3_1Label"></span></td>
+     <td>　<span class="sending3_1Label"></span></td>
     </tr>        
     <tr>
      <td><span class="sending4Label"></span></td>
-     <td><span class="sending4_1Label"></span></td>
+     <td>　<span class="sending4_1Label"></span></td>
     </tr>
     <tr>
      <td><span class="sending5Label"></span></td>
-     <td><span class="sending5_1Label"></span></td>
+     <td>　<span class="sending5_1Label"></span></td>
     </tr>
   </table><br>
    
