--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -135,7 +135,7 @@
      </td>
     </tr>
     <tr>
-     <td><p style="text-align: left;">
+     <td><p style="text-align: left; margin-left: 0px;">
        〒<span class="contractor_postal_codeLabel"></span><br>
        <span class="contractor_addressLabel"></span><br>
        <span class="contractor_buildingLabel"></span><br>
