--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -102,6 +102,33 @@
 <td><a href="pdf/agency_solicitation.pdf" target="_blank">PDF</a></td>
 </tr>
 </table>
+
+<br><br>  
+
+<table class="ta1">
+<caption>社内向け</caption>
+<tr>
+<th style="width: 35%;">就業規則</th>
+<td>就業規則</td>
+<td><a href="pdf/labor_regulation.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
+<th>不祥事件等取扱規程</th>
+<td>不祥事件等取扱規程</td>
+<td><a href="pdf/regulation_scandal.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
+<th>名古屋伏見ビル管理規則</th>
+<td>名古屋伏見ビル管理規則</td>
+<td><a href="pdf/regulations_building.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
+<th>勧誘方針</th>
+<td>勧誘方針のひな形</td>
+<td><a href="pdf/agency_solicitation.pdf" target="_blank">PDF</a></td>
+</tr>
+</table>
+ 
 </form>
 </div>
 </section>
