--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/index.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/index.html
@@ -70,5 +70,11 @@
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
 
+<script type="text/javascript">
+<!--
+if (!document.referrer){top.location.href="https://kizuna-ssi.github.io/inside_company/";}
+//-->
+</script>
+ 
 </body>
 </html>
