--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -26,7 +26,7 @@
   <label for="ac-3">■ 帳票関係</label>
   <div class="open">
     <a href="format.html">帳票一覧</a>
-    <a href="#">在庫管理</a>
+    <a href="https://docs.google.com/spreadsheets/d/14JcrUwB3CVTtCqC-G2oU_NMi9uF8pGr8BmQQzD2NmAc/edit?usp=sharing" target="_blank">在庫管理</a>
   </div>
 </div>
 
