--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/index.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/index.html
@@ -38,7 +38,7 @@
 <p>このサイトは「きずな少額短期保険」の社内向けのサイトです。<br>
 <br>
 推奨環境はPCのみとなります。スマートフォンやタブレットでのご利用は推奨していません。<br>
-また、JavaScript、Cookieが使用できる状態でご利用ください。<br>
+また、JavaScriptが使用できる状態でご利用ください。<br>
 </p>
 </section>
 
