--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -55,13 +55,14 @@
 <tr>
 <th>氏名</th>
 <td colspan="2"><input type="text" name="entry.147184437" id="addressname"size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
-<td><input type="text" name="entry.48928667" size="30" class="ws" autocomplete="off" id="honor" 
+<td><input type="text" name="entry.48928667" size="30" class="ws" autocomplete="on" id="honor" 
       style="width: 50px; margin: 0px 15px 0px 30px;"  placeholder="敬称"></td>
 </tr>
 <tr>
 <th>郵便番号</th>
 <td colspan="3">
-  <input type="text" id="contractor_postal_code" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;" name="entry.725401947"></td>
+  <input type="text" id="contractor_postal_code" class="p-postal-code ws" size="8" maxlength="8" style="width: 120px;" name="entry.725401947" autocomplete="off">
+</td>
 </tr>
 <tr>
 <th>住所</th>
@@ -74,37 +75,37 @@
 </tr>
 <tr>
 <th>送付物.1</th>
-<td colspan="2"><input type="text" name="entry.571521907" id="sending1" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.571521907" id="sending1" size="30" class="ws" autocomplete="on" style="width: 100%;"></td>
 <td>
-  <input type="text" name="entry.230824405" id="sending1_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+  <input type="text" name="entry.230824405" id="sending1_1" placeholder="部数" class="ws" autocomplete="on" style="width: 50px; margin: 0px 15px 0px 30px;">
 </td>
 </tr>
 <tr>
 <th>送付物.2</th>
-<td colspan="2"><input type="text" name="entry.1136923254" id="sending2" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.1136923254" id="sending2" size="30" class="ws" autocomplete="on" style="width: 100%;"></td>
 <td>
-  <input type="text" name="entry.1182823623" id="sending2_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+  <input type="text" name="entry.1182823623" id="sending2_1" placeholder="部数" class="ws" autocomplete="on" style="width: 50px; margin: 0px 15px 0px 30px;">
 </td>
 </tr>
 <tr>
 <th>送付物.3</th>
-<td colspan="2"><input type="text" name="entry.1514396093" id="sending3" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.1514396093" id="sending3" size="30" class="ws" autocomplete="on" style="width: 100%;"></td>
 <td>
-  <input type="text" name="entry.1746422599" id="sending3_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+  <input type="text" name="entry.1746422599" id="sending3_1" placeholder="部数" class="ws" autocomplete="on" style="width: 50px; margin: 0px 15px 0px 30px;">
 </td>
 </tr>
 <tr>
 <th>送付物.4</th>
-<td colspan="2"><input type="text" name="entry.254609885" id="sending4" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.254609885" id="sending4" size="30" class="ws" autocomplete="on" style="width: 100%;"></td>
 <td>
-  <input type="text" name="entry.1446297283" id="sending4_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+  <input type="text" name="entry.1446297283" id="sending4_1" placeholder="部数" class="ws" autocomplete="on" style="width: 50px; margin: 0px 15px 0px 30px;">
 </td>
 </tr>
 <tr>
 <th>送付物.5</th>
-<td colspan="2"><input type="text" name="entry.1134353344" id="sending5" size="30" class="ws" autocomplete="off" style="width: 100%;"></td>
+<td colspan="2"><input type="text" name="entry.1134353344" id="sending5" size="30" class="ws" autocomplete="on" style="width: 100%;"></td>
 <td>
-  <input type="text" name="entry.234563841" id="sending5_1" placeholder="部数" class="ws" autocomplete="off" style="width: 50px; margin: 0px 15px 0px 30px;">
+  <input type="text" name="entry.234563841" id="sending5_1" placeholder="部数" class="ws" autocomplete="on" style="width: 50px; margin: 0px 15px 0px 30px;">
 </td>
 </tr>
 </table>
