--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -46,6 +46,12 @@
 <td style="width: 10%;"><a href="pdf/pamphlet.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
+<th style="width: 20%;">チラシ</th>
+<td>パルモの死亡保険のチラシ</td>
+<td style="width: 20%;">KZ2023・MD・000</td>
+<td style="width: 10%;"><a href="pdf/palmo_flyer_202404.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
 <th>重要事項説明書</th>
 <td>きずなの死亡保険の重要事項説明書</td>
 <td>KZ2023・MD・004</td>
