--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/wiki.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/wiki.html
@@ -34,20 +34,18 @@
 <main>
 
 <section>
-<h2>このサイトについて</h2>
-<p>このサイトは「きずな少額短期保険」の社内向けのサイトです。<br>
-<br>
-推奨環境はPCのみとなります。スマートフォンやタブレットでのご利用は推奨していません。<br>
-また、JavaScriptが使用できる状態でご利用ください。<br>
-</p>
+<h2>被保険者の健康状態告知書</h2>
+<p>以下の項目が告知事項となります。<br>
+ <ul>
+  <li>被保険者のご職業と勤務先を記入してください。</li>
+  <li>現在入院中ですか。または医師から入院・手術を勧められていますか。<br>
+   ※「はい」に該当する場合はご加入いただくことができません。</li>
+  <li>過去6か月以内に、医師の診察・検査・治療・投薬を受けたことがありますか。ただし、風邪の治療で既に完治している場合は除きます。</li>
+  <li>過去5年以内に、同一の病気やケガで7日間以上の期間にわたり、医師の診察・検査・治療・投薬を受けたことがありますか。</li>
+  <li>過去5年以内に病気やケガで入院したこと、または手術を受けたことがありますか。<br>※日帰り入院・日帰り手術を含みます。</li>
+ </ul>
+ </p>
 </section>
-
-<section>
-<h2>News</h2>
-<dl id="new">
-<dt>2024/04/22<span class="icon-bg1">サービス</span></dt><dd>サイト公開</dd>
-</dl>
-</section>  
 
 </main>
 
