--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/wiki.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/wiki.html
@@ -37,11 +37,12 @@
 <h2>被保険者の健康状態告知書</h2>
 <p>以下の項目が告知事項となります。<br>
  <ol>
-  <li>被保険者のご職業と勤務先を記入してください。</li>
+  <li>被保険者のご職業と勤務先を記入してください。<br>
+   ※危険職種（レーサー・格闘家・パイロット等々）は不可の可能性あり。</li>
   <li>現在入院中ですか。または医師から入院・手術を勧められていますか。<br>
-   ※「はい」に該当する場合はご加入いただくことができません。</li>
+   ※「はい」に該当する場合は不可。</li>
   <li>過去6か月以内に、医師の診察・検査・治療・投薬を受けたことがありますか。<br>
-   ※ただし、風邪の治療で既に完治している場合は除きます。</li>
+   ※ただし、風邪の治療で既に完治している場合を除く。</li>
   <li>過去5年以内に、同一の病気やケガで7日間以上の期間にわたり、医師の診察・検査・治療・投薬を受けたことがありますか。</li>
   <li>過去5年以内に病気やケガで入院したこと、または手術を受けたことがありますか。<br>※日帰り入院・日帰り手術を含みます。</li>
  </ol>
