--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/wiki.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/wiki.html
@@ -49,6 +49,15 @@
  </p>
 </section>
 
+<section>
+<h2>死亡保険金にかかる税金の種類</h2>
+<p>死亡保険金に相続税がかかるのは、被保険者と契約者（保険料の負担者）が同一人である場合</p>
+<p>死亡保険金に所得税が課せられるのは、契約者（保険料の負担者）と受取人が同一人である場合</p>
+<p>死亡保険金に贈与税がかかるのは、被保険者、契約者（保険料の負担者）、受取人がすべて異なる場合</p>
+
+ </p>
+</section>
+ 
 </main>
 
 
