--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age.html
@@ -101,7 +101,12 @@
            <option value="97">97歳</option>
            <option value="98">98歳</option>
            <option value="99">99歳</option>
-         </select>
+         </select>                 
+         <div class="tooltip">
+         <label class="helpbutton"></label>
+         <div class="description">契約年齢とは責任開始日時点の年齢をいいます。
+         責任開始日は、申込受付完了が月初～15日の場合は翌月の1日、 16日～月末の場合は翌々月の1日となります。</div>
+        </div>
         </div>
       </td>
     </tr>
