--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age.html
@@ -124,6 +124,17 @@
       </td>
     </tr>
     <tr>
+      <th>商品選択</th>
+      <td>
+       <div class="radio1">
+        <input type="radio" id="normal_type" name="course" onchange="" value="normal_type">
+        <label for="normal_type" style="width: 200px;">通常告知型</label>
+        <input type="radio" id="relaxation_type" name="course" onchange="" value="relaxation_type">
+        <label for="relaxation_type" style="width: 200px;">引受基準緩和型</label>
+       </div>
+      </td>
+    </tr>
+    <tr>
       <th>加入コース</th>
       <td>
        <div class="radio1">
