--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age.html
@@ -34,7 +34,7 @@
 <main>
 
 <section>
- <h2>見積り <span style="font-size: 0.7em; font-weight: bold; color: #94545B;">＜きずなの死亡保険＞</span></h2>
+ <h2>見積り <span style="font-size: 0.7em; font-weight: bold; color: #94545B;">＜きずなの死亡保険（通常告知型）＞</span></h2>
  
  <div class="no-screen"> 
    <p style="text-align: right;">見積日：<span id="datedisplay2"></span></p>
@@ -120,17 +120,6 @@
         </div>
         <input type="radio" id="male" name="gender" onchange="calculate()" value="1"><label for="male">男性</label>
         <input type="radio" id="female" name="gender" onchange="calculate()" value="2"><label for="female">女性</label>
-       </div>
-      </td>
-    </tr>
-    <tr>
-      <th>商品選択</th>
-      <td>
-       <div class="radio1">
-        <input type="radio" id="normal_type" name="type" onchange="" value="normal_type">
-        <label for="normal_type" style="width: 200px;">通常告知型</label>
-        <input type="radio" id="relaxation_type" name="type" onchange="" value="relaxation_type">
-        <label for="relaxation_type" style="width: 200px;">引受基準緩和型</label>
        </div>
       </td>
     </tr>
