--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -15,8 +15,9 @@
   <input id="ac-2" name="accordion-1" type="checkbox">
   <label for="ac-2">■ きずなの死亡保険</label>
   <div class="open">
-    <a href="quotation_age.html">見積（契約年齢入力）</a>
-    <a href="quotation.html">見積（生年月日入力）</a>
+    <a href="quotation_age.html">見積（通常告知型）</a>
+    <a href="quotation_age2.html">見積（引受基準緩和型）</a>
+    <!--<a href="quotation.html">見積（生年月日入力）</a>-->
     <a href="application_print.html">申込書印刷</a>
     <a href="https://docs.google.com/spreadsheets/d/1ZZmths0DOUjum6Z8du5KSf1CykTfAzshZkDtdu0jFP0/edit?usp=sharing" target="_blank">葬儀保険の比較</a>
   </div>
