--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age2.html
@@ -34,7 +34,7 @@
 <main>
 
 <section>
- <h2>見積り <span style="font-size: 0.7em; font-weight: bold; color: #94545B;">＜きずなの死亡保険（通常告知型）＞</span></h2>
+ <h2>見積り <span style="font-size: 0.7em; font-weight: bold; color: #94545B;">＜きずなの死亡保険（引受基準緩和型）＞</span></h2>
  
  <div class="no-screen"> 
    <p style="text-align: right;">見積日：<span id="datedisplay2"></span></p>
@@ -281,7 +281,7 @@
 <div class="no-print">
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div></div>
 
-<script src="js/quotation_age.js"></script>
+<script src="js/quotation_age2.js"></script>
 <script>
  setInterval(function(){
     var y = new Date().getFullYear();
