--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age2.html
@@ -129,8 +129,8 @@
        <div class="radio1">
         <input type="radio" id="amount_fixed" name="course" onchange="customCalculate()" value="amount_fixed">
         <label for="amount_fixed" style="width: 200px;">保険金額固定コース</label>
-        <input type="radio" id="premium_fixed" name="course" onchange="customCalculate()" value="premium_fixed">
-        <label for="premium_fixed" style="width: 200px;">保険料定額コース</label>
+        <!--<input type="radio" id="premium_fixed" name="course" onchange="customCalculate()" value="premium_fixed">
+        <label for="premium_fixed" style="width: 200px;">保険料定額コース</label>-->
        </div>
       </td>
     </tr>
