--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -19,7 +19,7 @@
     <!--<a href="quotation.html">見積（生年月日入力）</a>-->
     <a href="application_print.html">申込書印刷</a>
     <a href="https://docs.google.com/spreadsheets/d/1ZZmths0DOUjum6Z8du5KSf1CykTfAzshZkDtdu0jFP0/edit?usp=sharing" target="_blank">葬儀保険の比較</a>
-    <a href="wiki.html">wiki</a>
+    <a href="memo.html">memo</a>
   </div>
 </div>
 
