--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -34,7 +34,7 @@
 <main>
 
 <section>
-<h2>被保険者の健康状態告知書</h2>
+<h2>被保険者の健康状態告知書（通常告知型）</h2>
 <p>以下の項目が告知事項となります。<br>
  <ol>
   <li>被保険者のご職業と勤務先を記入してください。<br>
@@ -49,6 +49,18 @@
  </p>
 </section>
 
+<section>
+<h2>被保険者の健康状態告知書（引受基準緩和型）</h2>
+<p>以下の項目の予定。<br>
+ <ol>
+  <li>職業</li>
+  <li>現在の健康状態</li>
+  <li>過去の傷病歴</li>
+ </ol>
+ </p>
+</section>
+
+ 
 <section>
 <h2>死亡保険金にかかる税金の種類</h2>
 <p>死亡保険金に相続税がかかるのは、被保険者と契約者（保険料の負担者）が同一人である場合</p>
