--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -114,6 +114,11 @@
 <table class="ta1">
 <caption>社内向け</caption>
 <tr>
+<th style="width: 35%;">事業方法書</th>
+<td>事業方法書</td>
+<td><a href="pdf/business_method_statement.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
 <th style="width: 35%;">就業規則</th>
 <td>就業規則</td>
 <td><a href="pdf/labor_regulation.pdf" target="_blank">PDF</a></td>
