--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -7,6 +7,7 @@
     <a href="record1.html">受電記録</a>
     <a href="record2.html">発送記録</a>
     <a href="https://docs.google.com/spreadsheets/d/1Ji9XBCrZWjnN825q3XS8hD3dCRZcHTz694QB2Cu_Z08/edit?usp=sharing" target="_blank">対応記録（パルモ関連）</a>
+    <a href="https://docs.google.com/spreadsheets/d/1kO_0TWbw-EGkrS5Kco2glB_1GcPdkdJaH8xgU4kL8Dk/edit?usp=sharing" target="_blank">管理台帳（パルモ関連）</a>
   </div>
 </div>
     
