--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -38,7 +38,7 @@
 <p>以下の項目が告知事項となります。<br>
  <ol>
   <li>被保険者のご職業と勤務先を記入してください。<br>
-   ※危険職種（レーサー・格闘家・パイロット等々）は不可の可能性あり。</li>
+   ※職種による危険選択はしていない…とのこと。</li>
   <li>現在入院中ですか。または医師から入院・手術を勧められていますか。<br>
    ※「はい」に該当する場合は不可。</li>
   <li>過去6か月以内に、医師の診察・検査・治療・投薬を受けたことがありますか。<br>
